--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ repositories {
 dependencies {
     // Use the Kotlin JDK 8 standard library
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-
+    implementation 'io.kotest:kotest-runner-junit5-jvm:4.1.1'
     // Use the Kotlin test library
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
